[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Instances/GUI/Buttons/BlurMaskButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/ShadersAndMaterials/BlurMask.shader" type="Shader" id=2]
[ext_resource path="res://Assets/Textures/GUI/Buttons/BlurMaskButton/Left/EdgeCenter.svg" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/Misc/White.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/GUI/Buttons/BlurMaskButton/Right/EdgeCenter.svg" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/blury = 3.0
shader_param/modulate = Color( 0, 0, 0, 1 )
shader_param/mask = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/blury = 3.0
shader_param/modulate = Color( 0, 0, 0, 1 )
shader_param/mask = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/blury = 3.0
shader_param/modulate = Color( 0, 0, 0, 1 )
shader_param/mask = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("BlurCenter:material:shader_param/blury")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 3.0, 6.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlurRight:material:shader_param/blury")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ 3.0, 6.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlurLeft:material:shader_param/blury")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 3.0, 6.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BlurLeft:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ 0.0, -30.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BlurLeft:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 60.0, 30.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BlurCenter:margin_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.0166666, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 60.0, 30.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BlurCenter:margin_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.0166666, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ -60.0, -30.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BlurRight:margin_left")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.0166666, 0.4 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ -60.0, -30.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BlurRight:margin_right")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.0166666, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 0.0, 30.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("BlurCenter:material:shader_param/blury")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 6.0, 3.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlurRight:material:shader_param/blury")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ 6.0, 3.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlurLeft:material:shader_param/blury")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 6.0, 3.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BlurLeft:margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ -30, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BlurLeft:margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 30, 60 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BlurCenter:margin_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 30, 60 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BlurCenter:margin_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.0166666, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ -30, -60 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("BlurRight:margin_left")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.0166666, 0.4 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ -30, -60 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BlurRight:margin_right")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.0166666, 0.4 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ 30, 0 ]
}

[node name="Button" type="Control"]
anchor_right = 0.625
anchor_bottom = 0.111
margin_bottom = 0.119987
script = ExtResource( 1 )

[node name="BlurLeft" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_bottom = 1.0
margin_right = 60.0
texture = ExtResource( 4 )
expand = true

[node name="BlurCenter" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_right = -60.0
texture = ExtResource( 4 )
expand = true

[node name="BlurRight" type="TextureRect" parent="."]
material = SubResource( 3 )
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
texture = ExtResource( 4 )
expand = true

[node name="Texture" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Button"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 7.62939e-006
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Clicks"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/HooverIn = SubResource( 5 )
anims/HooverOut = SubResource( 6 )
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
